--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   feather_icons: ^1.2.0
   flutter_screenutil: ^5.9.3
   animation_wrappers: ^3.0.0
+  auto_route_generator: ^9.3.1
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +63,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner:
-  auto_route_generator:
+  build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -77,9 +77,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+
+flutter_assets:
+  assets_path: assets/
+  output_path: lib/core/constants
+  filename: my_assets.dart
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
