--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   http: ^1.3.0
   equatable: ^2.0.7
-  velocity_x: ^4.3.1
+  velocity_x: ^4.2.1
   velocity_bloc: ^1.2.1
   shared_preferences: ^2.5.2
   auto_route: ^9.3.0+1
@@ -52,6 +52,10 @@ dependencies:
   flutter_screenutil: ^5.9.3
   animation_wrappers: ^3.0.0
   auto_route_generator: ^9.3.1
+  flutter_feather_icons: ^2.0.0+1
+  fleather: ^1.20.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -97,10 +101,10 @@ flutter_assets:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+fonts:
+  - family: Poppins
+    fonts:
+      - asset: fonts/Poppins-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
