--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   fluttertoast: ^8.2.12
   loading_animation_widget: ^1.3.0
   image_picker: ^1.1.2
+  i18n_extension: ^15.0.4
+  flutter_localizations:
+    sdk: flutter
+  keyboard_avoider: ^0.2.0
   
 
 
